Rename Web Project

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -3,9 +3,7 @@
         <!-- Insert header here -->
     </nb-layout-header>
 
-    <nb-layout-column>
-        TODO
-    </nb-layout-column>
+    <nb-layout-column> TODO </nb-layout-column>
 
     <nb-layout-footer fixed>
         <!-- Insert footer here -->
