Add web-home Library

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -1,9 +1,13 @@
-<nb-layout>
-    <nb-layout-header fixed>
-        <!-- Insert header here -->
-    </nb-layout-header>
+<nb-layout class="h-100">
+    <!-- <nb-layout-header fixed> -->
+    <!-- Insert header here -->
+    <!-- </nb-layout-header> -->
 
-    <nb-layout-column> TODO </nb-layout-column>
+    <nb-layout-column class="my-auto">
+        <div class="d-flex align-middle justify-content-center">
+
+        </div>
+    </nb-layout-column>
 
     <nb-layout-footer fixed>
         <!-- Insert footer here -->
