--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -4,9 +4,7 @@
     <!-- </nb-layout-header> -->
 
     <nb-layout-column class="my-auto">
-        <div class="d-flex align-middle justify-content-center">
-
-        </div>
+        <div class="d-flex align-middle justify-content-center"></div>
     </nb-layout-column>
 
     <nb-layout-footer fixed>
