Move Home Component to Separate Library

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- </nb-layout-header> -->
 
     <nb-layout-column class="my-auto">
-        <div class="d-flex align-middle justify-content-center"></div>
+        <omt-web-home></omt-web-home>
     </nb-layout-column>
 
     <nb-layout-footer fixed>
