Re-Architect for Enterprise

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- </nb-layout-header> -->
 
     <nb-layout-column class="my-auto">
-        <omt-web-home></omt-web-home>
+        <omt-create-mob></omt-create-mob>
     </nb-layout-column>
 
     <nb-layout-footer fixed>
