Front End Architecture - Separate Dumb Components

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -4,7 +4,8 @@
     <!-- </nb-layout-header> -->
 
     <nb-layout-column class="my-auto">
-        <omt-create-mob></omt-create-mob>
+        <router-outlet></router-outlet>
+        <!-- <omt-create-mob></omt-create-mob> -->
     </nb-layout-column>
 
     <nb-layout-footer fixed>
