Add Title and Adjust UI Spacing

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -3,8 +3,8 @@
     <!-- Insert header here -->
     <!-- </nb-layout-header> -->
 
-    <nb-layout-column class="my-auto">
-        <router-outlet></router-outlet>
+    <nb-layout-column class="h-100">
+        <router-outlet class="h-100"></router-outlet>
         <!-- <omt-create-mob></omt-create-mob> -->
     </nb-layout-column>
 
