--- a/libs/web/home/src/lib/home.component.html
+++ b/libs/web/home/src/lib/home.component.html
@@ -1,1 +1,5 @@
-<omt-create-mob (createMobClick)="onCreateMobClick($event)"></omt-create-mob>
+<div class="h-100 my-auto d-flex flex-column">
+    <h1 class="mx-auto text-center mb-2 title">Open Mob Timer</h1>
+    <h2 class="mx-auto text-center subtitle">Your free, open source Mob Timer for remote teams.</h2>
+    <omt-create-mob (createMobClick)="onCreateMobClick($event)"></omt-create-mob>
+</div>
