--- a/libs/web/home/src/lib/components/create-mob/create-mob.component.html
+++ b/libs/web/home/src/lib/components/create-mob/create-mob.component.html
@@ -1,15 +1,13 @@
-<div class="my-auto d-flex align-middle justify-content-center">
-    <nb-form-field class="w-50">
-        <input type="text"
-               [(ngModel)]="mobName"
-               placeholder="Enter a name for your mob"
-               aria-label="Enter your mob's name"
-               nbInput />
-        <button nbSuffix
-                nbButton
-                ghost
-                (click)="createMob()">
-            <nb-icon icon="arrow-forward-outline"></nb-icon>
-        </button>
-    </nb-form-field>
-</div>
+<nb-form-field class="mx-auto">
+    <input type="text"
+           [(ngModel)]="mobName"
+           placeholder="Enter a name for your mob"
+           aria-label="Enter your mob's name"
+           nbInput />
+    <button nbSuffix
+            nbButton
+            ghost
+            (click)="createMob()">
+        <nb-icon icon="arrow-forward-outline"></nb-icon>
+    </button>
+</nb-form-field>
